# vision-project

./: .gitignore  .gitmodules  Makefile  README.rst
src/cordial/: package.xml
src/discord_bot/: CMakeLists.txt  README.md  package.xml  setup.py
src/discord_bot/scripts/: discord_bot.py
src/ros_vision_interaction/: CMakeLists.txt  package.xml  setup.py  topic_parameters.yaml
src/ros_vision_interaction/action/: StartInteraction.action
src/ros_vision_interaction/config/: config.yaml
src/ros_vision_interaction/examples/: scheduled_interaction.py
src/ros_vision_interaction/launch/: behavior_controller.launch  main_controller.launch  qt_sar_demo_interaction.launch  ros_interaction_manager.launch  ros_vision_project_delegator.launch  sar_demo_interaction.launch  scheduled_interaction.launch  vision_project.launch
src/ros_vision_interaction/resources/: long_term_interaction_nodes.json  sar_demo_nodes.json
src/ros_vision_interaction/resources/demo-interaction/: demo_interaction.json  variations.json
src/ros_vision_interaction/resources/deployment/: act_interventions.json  deployment_interactions.json  first_interaction.json  goal_setting.json  grit_dialogue.json  interaction_variations.json  mindfulness_body_scan.json  mindfulness_breathing.json  mindfulness_drinking.json  prompted.json  reading_task_data.json  scheduled.json  scheduled_variations.json  test_interactions.json
src/ros_vision_interaction/scripts/: cordial_interface.py  launch_mongodb_server.sh  mongodb_record_topics.sh  ros_interaction_manager.py  ros_reading_evaluator.py  ros_vision_project_delegator.py
src/ros_vision_interaction/src/ros_vision_interaction/controllers/: __init__.py  behavior_controller.py  interaction_manager.py  main_controller.py  vision_project_delegator.py
src/ros_vision_interaction/src/ros_vision_interaction/interactions/: __init__.py
src/ros_vision_interaction/src/ros_vision_interaction/interfaces/: cordial_interface.py
src/ros_vision_interaction/src/ros_vision_interaction/tests/: test_behavior_controller.py  test_main_controller.py
src/ros_vision_interaction/src/vision-interaction/: setup.py
src/ros_vision_interaction/src/vision-interaction/controllers/: interaction_manager.py  vision_project_delegator.py
src/ros_vision_interaction/src/vision-interaction/interaction_builder/: __init__.py
src/ros_vision_interaction/src/vision-interaction/interfaces/: __init__.py  cordial_interface.py  vision_terminal_interface.py
src/ros_vision_interaction/src/vision-interaction/reading_evaluator/: __init__.py
src/ros_vision_interaction/src/vision-interaction/tests/: conftest.py  test_interaction_builder.py  test_interaction_manager.py  test_reading_evaluator.py  test_reading_task_manager.py  test_vision_project_delegator.py
src/ros_vision_interaction/src/vision-interaction/vision_interaction/: __init__.py
src/ros_vision_interaction/src/vision-interaction/vision_interaction/controllers/: __init__.py  demo_interaction_controller.py  (+2 more)
src/ros_vision_interaction/src/vision-interaction/vision_project_tools/: __init__.py  constants.py  engine_statedb.py  reading_task_database.py  reading_task_manager.py  reading_task_tools.py  vision_engine.py
src/ros_vision_interaction/test/: test_behavior_controller_ros.py  test_behavior_controller_ros.test  test_main_controller_ros.py  test_main_controller_ros.test
src/ros_vision_interaction/tests/: conftest.py  test_behavior_controller_ros.py  test_behavior_controller_ros.test  test_interaction_manager.py  test_main_controller_ros.test  test_vision_project_delegator.py
(+124 files in other folders)
