<?xml version="1.0"?>
<package format="2">

  <name>ros_vision_interaction</name>
  <version>0.0.0</version>
  <description>The cordial_interaction package</description>
  <maintainer email="emilyzho@usc.edu">Emily Zhou</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cordial_msgs</build_depend>

  <exec_depend>cordial_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  

</package>