<?xml version="1.0"?>
<package format="2">

  <name>ros_vision_interaction</name>
  <version>0.0.0</version>
  <description>The ros_vision_interaction package</description>
  <maintainer email="emilyzho@usc.edu">Emily Zhou</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cordial_msgs</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>cordial_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>rostest</test_depend>

</package>